== 2018-04-13 ==
	* OpenSSL updated to 1.0.2o

== 2017-07-02 ==
	* Fixed compat with CAP LS changes in mIRC 7.49 (issue 50)
	* OpenSSL updated to 1.0.2l

== 2017-02-25 ==
	* Added new enforce_max_key_length option to blow.ini

== 2017-02-24 ==
	* Happy New Year
	* OpenSSL updated to 1.0.2k

== 2016-06-15 ==
	* OpenSSL updated to 1.0.2h
	* Added version to /fishdebug output
	* Do not allow setting ECB keys that exceed 56 bytes

== 2016-03-02 ==
	* OpenSSL updated to 1.0.2g

== 2015-11-08 ==
	* OpenSSL updated to 1.0.2d

== 2015-01-27 ==
	* OpenSSL updated to 1.0.2
	* Installer: added support for mIRC with mirc.exe + mirc.ini in the same
	  directory but portable flag set to no. (issue 39)

== 2015-01-08 ==
	* OpenSSL updated to 1.0.1k
	* Added hint to OpenSSL DLL error message
	* Fixed minor syntax mistake in fish_10.mrc

== 2014-11-29 ==
	* Added support for STARTTLS (new in mIRC 7.38)
	* OpenSSL updated to 1.0.1j
	* Restored working order on SSE 1-only CPUs (again)
	* This is a recommended update!

== 2014-08-25 ==
	* Switch to MinHook library. This enables Wine compatibility.
	* There's no need to upgrade to this version unless you run mIRC in Wine.

== 2014-08-07 ==
	* Improved error handling
	* Installer sets load=1 in [ssl] (mirc.ini) - required for mIRC 7.35
	* OpenSSL updated to 1.0.1i

== 2014-07-05 ==
	* Small improvements to the installer
	* New /fishdebug command, kindly provided by devn0ll!

== 2014-06-22 ==
	* Fix for mIRC 7.34 + ZNC 1.x [ CAP server-time / IRC Message Tags support ]
	* New setup routine (installer)
	* New debugging commands
	* New README
	* Misc. internal changes

== 2014-06-12 ==
	* New internal startup flow
	* fish_10.mrc file MUST be updated!
	* OpenSSL update to 1.0.1h

== 2014-04-08 ==
	* OpenSSL update to 1.0.1g

== 2014-01-11 ==
	* OpenSSL update to 1.0.1f (fixes some security issues)
	* Restored working order on SSE 1-only CPUs
	* Some internal changes to memory management

== 2013-09-23 ==