@@ -1,9 +1,35 @@
+== 2019-10-06 ==
+  * mirc_fish_10-setup-2019-10-06.exe
+    MD5: 2807E56613DFC3DD67A07F6A2C301449
+    SHA-1: DAEAF552A13A9533C039FBEFB78F27789DF6D4F1
+    SHA3-224: 8A9A240C0E5BB9103800394C71AAB15B6F1C5E08C09164CAD7A2192F
+  * mirc_fish_10-with-ssl-2019-10-06.zip
+    MD5: F92CDCB99CD1531E3343A1D780DA0714
+    SHA-1: 963C22ACD9D240756820C11A7EC8EC3E6DE9429D
+    SHA3-224: C0184A1898DC638BE77A7863C1B3EF6562788EC5E8D7F8ACE9E3CBA4
+  * fish_10.dll
+    MD5: C0713AE2C6B564ED8B99411561BEC248
+    SHA-1: 3C2CB30014251F674F761B0034458F0721E3A7EB
+    SHA3-224: AF734F750ECEDC53EE2D0D4BA6D6EE473F8E7E0E8E29D2C4BB0CD123
+  * fish_inject.dll
+    MD5: 80535AC0FC76C4EA0AC141397707061D
+    SHA-1: 7679C7B304B8116CAD70D94EEF4F20A987E76AD9
+    SHA3-224: 891BCE344BC6C680EF89344152F81BE22CA70CF21E1716C79EF85927
+  * libssl-1_1.dll
+    MD5: 40D375CC85B016083C48A4394696C8C5
+    SHA-1: A4D09F04CD15284513C27B34ECF5201BF1EC783A
+    SHA3-224: 385960362FCD99621DEA1626CB56290D67A5033F6E37F8C01D2A78BF
+  * libcrypto-1_1.dll
+    MD5: 8DCBCEC597AD09A8FA3AED94973EF683
+    SHA-1: 2EE4D0E81B56B444EABCF77F533C7D6939C8FAF3
+    SHA3-224: D00C309546653A85556902E2F0DA5BC10D145413A8DEBD0D2F0ACF1F
+
 == 2018-04-13 ==
-  * mirc_fish_10-setup-2017-04-13.exe
+  * mirc_fish_10-setup-2018-04-13.exe
     MD5: 8A2DD84A6967591C42DB26D5B008B218
     SHA-1: F323E4BB85147956D117007EC90D64B0E5E60D61
     SHA3-224: 2A567C6D1B8B58AAAE95A8144E00B8B475E3394C120CE3386A088F64
-  * mirc_fish_10-with-ssl-2017-04-13.zip
+  * mirc_fish_10-with-ssl-2018-04-13.zip
     MD5: 00BE6174FC75D84A1195A126DDCA801D
     SHA-1: 6180133CEB1777DA5F3CE28819B770EAEF1DA48C
     SHA3-224: E55BEB69AB36A55656E05853D5EA5E310D6FCB96620B23EE2BCD04E4
