@@ -19,7 +19,7 @@ typedef int(WSAAPI* closesocket_proc)(SOCKET);
 typedef int(__cdecl* SSL_write_proc)(void *ssl, const void *buf, int num);
 typedef int(__cdecl* SSL_read_proc)(void *ssl, void *buf, int num);
 
-typedef int(__cdecl* SSL_state_proc)(const void *ssl);
+typedef int(__cdecl* SSL_is_init_finished_proc)(const void *ssl);
 typedef int(__cdecl* SSL_get_fd_proc)(const void *ssl);
 
 
