@@ -1,3 +1,12 @@
+== 2019-10-06 ==
+	* Compatible with mIRC 7.56 and above. No longer compatible with 7.55 and below.
+	* OpenSSL updated to 1.1.1d - issue 57
+	* Outgoing cryptmark fixed (thx silv3rr) - issue 55
+	* Rare failure of DH1080 handshakes fixed (thx maroonbells) - issue 58
+	* Building OpenSSL based on https://github.com/kiyolee/openssl1_1-win-build
+	* No more explicit dependency on any particular MSVC++ runtime
+	* Windows XP and Server 2003 are longer supported
+
 == 2018-04-13 ==
 	* OpenSSL updated to 1.0.2o
 
